traefik/dashboard.yaml
# ./scripts/env-to-file.sh --file=traefik/dashboard.yaml | k apply -f -
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.$APP_DOMAIN`) && (PathPrefix(`/dashboard/`) || PathPrefix(`/api/`))
      kind: Rule
      priority: 99
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: management
          namespace: default
